--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png">
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="public/apple-icon.png">
+  <link rel="icon" type="image/png" href="public/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Energy Consumption & Trends
@@ -17,8 +17,8 @@
   <link href="css/bootstrap.min.css" rel="stylesheet" />
   <link href="css/now-ui-dashboard.css?v=1.2.0" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="demo/demo.css" rel="stylesheet" />
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
+  <link href="css/demo.css" rel="stylesheet" />
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
   <script src="js/core/popper.min.js"></script>
   <script src="js/core/bootstrap.min.js"></script>
   <script src="js/plugins/perfect-scrollbar.jquery.min.js"></script>
@@ -31,7 +31,7 @@
   <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="js/now-ui-dashboard.min.js?v=1.2.0" type="text/javascript"></script>
   <!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
-  <script src="demo/demo.js"></script>
+  <script src="js/demo.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/Gauge.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
@@ -41,7 +41,7 @@
   <script>
     $(document).ready(function() {
       // Javascript method's body can be found in assets/js/demos.js
-      demo.initDashboardPageCharts();
+      // demo.initDashboardPageCharts();
     });
   </script>
 </head>
@@ -90,35 +90,9 @@
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
 
-              <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Test
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-              <li><button id="week">kW/Week</button></li>
-              <li><button id="hour">kW/Hour</button></li>
-              <input type="text" name="daterange" value="01/01/2018 - 01/15/2018"/>
+              <input type="text" name="daterange" value="01/01/2017 - 01/15/2017"/>
             </ul>
           </div>
         </div>
@@ -166,13 +140,23 @@
       </div>
     </div>
   </div>
-
-  <script>
-  $('#myModal').on('shown.bs.modal', function () {
-  $('#myInput').trigger('focus')
-})
-  </script>
+  <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+  <div class="modal-content" style="padding:50px;">
+    <form>
+    <div class="checkbox">
+      <label><input type="checkbox" value="Agriculture Engineering">Agriculture Engineering</label>
+    </div>
+    <div class="checkbox">
+      <label><input type="checkbox" value="">Archtecture</label>
+    </div>
+    <div class="checkbox">
+      <label><input type="checkbox" value="">Bachman Hall</label>
+    </div>
+  </div>
+  </div>
+  </div>
 
 </body>
-
+</form>
 </html>
