\(._.)/ Put building name checkmarks

--- a/index.html
+++ b/index.html
@@ -144,15 +144,132 @@
   <div class="modal-dialog modal-lg">
   <div class="modal-content" style="padding:50px;">
     <form>
-    <div class="checkbox">
-      <label><input type="checkbox" value="Agriculture Engineering">Agriculture Engineering</label>
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox" value="">Archtecture</label>
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox" value="">Bachman Hall</label>
-    </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="Agriculture Engineering">Agriculture Engineering</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Architecture</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Bachman Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Biomedical Science</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Business Administration Shidler</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Crawford Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Dean Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Duke Kahanamoku Pool</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Environmental Protection</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Everly Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">George Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Gilmore Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Hamilton Library</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Hawaii Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Korean Studies</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Hawaii Institute of Geophysics NOAA</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Hawaii Institute of Geophysics Substations</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Health & Physical Education - Klum Gym</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Health & Physical Education</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Keller Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Law Library</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Law School</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Les Murakami Stadium</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Marine Science</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Miller Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Moore Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Mudis Complex</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Pacific Biosciences Research Center</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Physical Science</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Pacific Ocean Science and Technology</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Queen Liliuokalani Center of Student Services</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Quad Chiller Plant</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Sakamaki Hall AC Equipment</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Sakamaki Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Multipurpose Building</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Saunders  Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Sherman</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Spalding Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">St John Plant Science</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Stan Sheriff Center</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Webster Hall</label>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" value="">Wist Hall</label>
+      </div>
   </div>
   </div>
   </div>
