Issue 2087: Resolved Dashboard Landing Graph & Mapbox Clicking Tag Issues

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+  <script src="js/demos.js" type="text/javascript" charset="utf-8" async defer></script>
 
   <script>
     $(document).ready(function() {
       // Javascript method's body can be found in assets/js/demos.js
-      // demo.initDashboardPageCharts();
+      demo.initDashboardPageCharts();
     });
   </script>
 </head>
@@ -61,6 +62,12 @@
       </div>
       <div class="sidebar-wrapper">
         <ul class="nav">
+          <li class="active ">
+            <a href="./about.html">
+              <i class="now-ui-icons design_app"></i>
+              <p>About</p>
+            </a>
+          </li>
           <li class="active ">
             <a href="./index.html">
               <i class="now-ui-icons design_app"></i>
