--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>Energy Consumption & Trends | Map</title>
+    <title>Map | Energy Consumption & Trends</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
@@ -259,7 +259,7 @@ function dataFinished() {
             }
         }, labelLayerId);
 
-        map.on('click', b, function(e) {
+        map.on('click', b + reloads, function(e) {
             // Popups on clicks
             var coordinates = e.features[0].geometry.coordinates.slice()[0];
             var description = e.features[0].properties.description;
