--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                               type: "tsgauge",
                               data: {
                                   datasets: [{
-                                      backgroundColor: ["#0fdc63", "#fd9704", "#ff7143"],
+                                      backgroundColor: ["#41EADA","#0fdc63", "#fd9704", "#ff7143"],
                                       borderWidth: 0,
                                       gaugeData: {
                                           value: 60,
                                           valueColor: "#ff7143"
                                       },
                                       // Lowest, Avg, Max, Unreachable
-                                      gaugeLimits: [0, 56, 148, 250]
+                                      gaugeLimits: [0,28, 56, 148, 250]
                                   }]
                               },
                               options: {
@@ -179,13 +179,13 @@
                                   type: "tsgauge",
                                   data: {
                                       datasets: [{
-                                          backgroundColor: ["#0fdc63", "#fd9704", "#ff7143"],
+                                          backgroundColor: ["#41EADA", "#0fdc63", "#fd9704", "#ff7143"],
                                           borderWidth: 0,
                                           gaugeData: {
-                                              value: 21.0936,
+                                              value: 21.09,
                                               valueColor: "#ff7143"
                                           },
-                                          gaugeLimits: [0, 20, 52, 88]
+                                          gaugeLimits: [0,10, 20, 52, 88]
                                       }]
                                   },
                                   options: {
@@ -236,27 +236,38 @@
                                       borderColor: window.chartColors.red,
                                       backgroundColor: color(window.chartColors.red).alpha(0.2).rgbString(),
                                       data: [{
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }]
+                                                x: "01/01/2017", y: 38.30128056
+                                            }, {
+                                                x: "03/01/2017", y: 38.26139167
+                                            }, {
+                                                x: "05/01/2017", y: 40.02798611
+                                            }, {
+                                                x: "07/01/2017", y: 41.06833611
+                                            }, {
+                                                x: "09/01/2017", y: 39.33268333
+                                            }, {
+                                                x: "11/01/2017", y: 40.25204167
+                                            }, {
+                                                x: "13/01/2017", y: 39.72630833
+                                            }, {
+                                                x: "15/01/2017", y: 39.56111667
+                                            }, {
+                                                x: "17/01/2017", y: 39.67928333
+                                            }, {
+                                                x: "19/01/2017", y: 40.62209167
+                                            }, {
+                                                x: "21/01/2017", y: 42.19443333
+                                            }, {
+                                                x: "23/01/2017", y: 39.10553889
+                                            }, {
+                                                x: "25/01/2017", y: 41.74008889
+                                            }, {
+                                                x: "27/01/2017", y: 40.81031944
+                                            }, {
+                                                x: "29/01/2017", y: 40.15787778
+                                            }, {
+                                                x: "31/01/2017", y: 39.70769444
+                                            }],
                                   }, {
                                       label: 'My Second dataset',
                                       borderColor: window.chartColors.blue,
