--- a/map.html
+++ b/map.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 </head>
 <body>
+
 <div class="sidebar pin-topleft z1 pad1">
   <div class="sidebar-inner fill-white round lifted">
     <header class="pad2">
@@ -63,6 +64,35 @@
     </div>
   </div>
 </div>
+
+<div class="sidebar pin-right z1 pad1">
+  <div class="sidebar-inner fill-white round lifted">
+    <header class="pad2">
+      <h3>High Energy Buildings</h3>
+    </header>
+    <div id="info">
+        <center>
+            The top ten buildings in regards to energy usage.
+            <div class="pad1">
+
+                <ol id="building-list" class='txt-ol'>
+                </ol>  
+            </div>
+        </center>
+    </div>
+
+    <br />
+    <div id="legend" class="legend quiet col12 clearfix round-bottom mobile-cols">
+      <div class="strong micro pad1x pad0y col2 center round-bottomleft" style="background-color: rgba(255, 255, 255, 0.5)"></div>
+      <div class="strong micro pad1x pad0y col2 center" style="background-color:rgba(255, 204, 204, 0.5)"></div>
+      <div class="strong micro pad1x pad0y col2 center" style="background-color:rgba(255, 153, 153, 0.5)"></div>
+      <div class="strong micro pad1x pad0y col2 center" style="background-color:rgba(255, 102, 102, 0.5)"></div>
+      <div class="strong micro pad1x pad0y col2 center" style="background-color:rgba(255, 51, 51, 0.5)"></div>
+      <div class="strong micro pad1x pad0y col2 center round-bottomright" style="background-color: rgba(255, 0, 0, 0.5)"></div>
+    </div>
+  </div>
+</div>
+
 
 <div id='map'></div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
@@ -171,6 +201,8 @@ $('input[name="daterange"]').daterangepicker({}, function (start, end, label) {
     $($('.micro')[3]).text("");
     $($('.micro')[4]).text("");
     $($('.micro')[5]).text("");
+
+    $("#building-list").empty();
 
     for (let b in buildings) {
         buildings[b].num_of_buildings = 0;
@@ -291,8 +323,21 @@ function dataFinished() {
                     `)
                 .addTo(map);
         });
-        
-        
+    }
+    // Update Right Sidebar
+    var sortable = [];
+    for (let b in buildings) {
+        sortable.push([b, buildings[b].sumOfKWh]);
+    }
+    sortable.sort(function(a, b) {
+        return a[1] - b[1];
+    })
+    for (let i = 0; i < 10; i++) {
+        $("#building-list").append(`<div class="txt-li">
+            <strong>
+            ${sortable[i][0].split('_').join(' ').toLowerCase().split(' ').map((s) => s.charAt(0).toUpperCase() + s.substring(1)).join(' ')}
+            </strong>
+            </div>`);
     }
 }
 
