added bottom graph

--- a/index.html
+++ b/index.html
@@ -231,96 +231,11 @@
                   <!--<div class="chart-area">-->
                   <div class="container">
                     <div class="row">
-                      <div class="col"></div>
+      
                       <div class="col">
-                        <canvas id="canvas100" style="z-index: 2; height: 400px; width:1000px"></canvas>
-
-                        <script>
-                          var color = Chart.helpers.color;
-                              var scatterChartData = {
-                                  datasets: [{
-                                      label: 'My First dataset',
-                                      borderColor: window.chartColors.red,
-                                      backgroundColor: color(window.chartColors.red).alpha(0.2).rgbString(),
-                                      data: [{
-                                                x: "01/01/2017", y: 38.30128056
-                                            }, {
-                                                x: "03/01/2017", y: 38.26139167
-                                            }, {
-                                                x: "05/01/2017", y: 40.02798611
-                                            }, {
-                                                x: "07/01/2017", y: 41.06833611
-                                            }, {
-                                                x: "09/01/2017", y: 39.33268333
-                                            }, {
-                                                x: "11/01/2017", y: 40.25204167
-                                            }, {
-                                                x: "13/01/2017", y: 39.72630833
-                                            }, {
-                                                x: "15/01/2017", y: 39.56111667
-                                            }, {
-                                                x: "17/01/2017", y: 39.67928333
-                                            }, {
-                                                x: "19/01/2017", y: 40.62209167
-                                            }, {
-                                                x: "21/01/2017", y: 42.19443333
-                                            }, {
-                                                x: "23/01/2017", y: 39.10553889
-                                            }, {
-                                                x: "25/01/2017", y: 41.74008889
-                                            }, {
-                                                x: "27/01/2017", y: 40.81031944
-                                            }, {
-                                                x: "29/01/2017", y: 40.15787778
-                                            }, {
-                                                x: "31/01/2017", y: 39.70769444
-                                            }],
-                                  }, {
-                                      label: 'My Second dataset',
-                                      borderColor: window.chartColors.blue,
-                                      backgroundColor: color(window.chartColors.blue).alpha(0.2).rgbString(),
-                                      data: [{
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }, {
-                                          x: randomScalingFactor(),
-                                          y: randomScalingFactor(),
-                                      }]
-                                  }]
-                              };
-
-                              window.onload = function() {
-                                  var ctx = document.getElementById('canvas100').getContext('2d');
-                                  window.myScatter = Chart.Scatter(ctx, {
-                                      data: scatterChartData,
-                                      options: {
-                                          title: {
-                                              display: true,
-                                              text: 'Chart.js Scatter Chart'
-                                          },
-                                      }
-                                  });
-                              };
-
-                          </script>
-
+                        <img src="https://i.imgur.com/DeH5i9c.png">
                         <!--</div>-->
-                        <div class="col"></div>
+
                       </div>
                       <div class="row">
                         <!--<div class="container">-->
