Demo Text for About Page

--- a/about.html
+++ b/about.html
@@ -124,11 +124,11 @@
           <div class="col-md-12">
             <div class="card">
               <div class="card-header">
-                <h5 class="title">Now Ui Table Heading</h5>
-                <p class="category">Created using Montserrat Font Family</p>
+                <h5 class="title">Overview</h5>
+                <!-- <p class="category">Created using Montserrat Font Family</p> -->
               </div>
               <div class="card-body">
-                <div class="typography-line">
+                <!-- <div class="typography-line">
                   <h1>
                     <span>Header 1</span>The Life of Now Ui Dashboard </h1>
                 </div>
@@ -151,14 +151,25 @@
                 <div class="typography-line">
                   <h6>
                     <span>Header 6</span>The Life of Now Ui Dashboard </h6>
-                </div>
+                </div> -->
                 <div class="typography-line">
                   <p>
-                    <span>Paragraph</span>
-                    I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
+                    On June 8, 2015 Governor David Ige signed into law HRS 304a-119 which established a collective goal for the University of Hawai‘i “to become net-zero with respect to energy use, producing as much (renewable) energy as the system consumes across all campuses by January 1, 2035.”
+</p>
+<p>
+The goal of this project is to assist the University of Hawaii Director of Energy Management and State of Hawaii to achieve the requirements described by this new law.  In the first stages of preparing the University, this project will be used to help determine what the current energy consumptions for the University of Hawaii are.  This data will then be used as a baseline data to help establish the definition upon which the energy goals are created.  From this baseline, the University of Hawaii will then be able to calculate their progress on their way towards the Net Zero mandate.  In essence, the University of Hawaii will be able to calculate how much energy it will need to produce and reduce to reach its’ goals.
+</p>
+<p>
+In order to determine the percent progress towards the Net Zero goal, it must be first determined how the energy consumption is calculated.  Traditionally, energy consumption is defined by kilowatts usage per hour per square foot.  Unfortunately, this traditional method of calculation produces numbers that are more useful in determining a baseline comparison with residential and corporate numbers.  This particular baseline does not work well within a university environment.  Within the University environment, different buildings have a wide range of energy usage.  A classroom building will have a lower usage than the Stan Sheriff building on a game day.  The Duke Kahanamoku pool will have less of a power drop over a school break than the Campus Center.  As a university, maybe a better question should be how is the energy usage compared to the number of degrees awarded or compared to the number of research dollars awarded. 
+</p>
+<p>
+As can be expected the energy requirements for the University of Hawaii are unique in nature.  In the energy community, most often energy is calculated in terms of Kilowatts per hour (kWh).  When looking over at this statistic and comparing it to other industries or residential data, the University of Hawaii’s number do not compare.  To this end, the data analytics used in this project will help by defining a new baseline number.  We will be calculating the energy consumption per degrees offered (annually) and energy consumption per research dollar spend.  This data can then be used to compare with other universities to see the efficiency of the University of Hawaii.
+<p>
+As a subset to these goals, this dashboard will also help the University of Hawaii to monitor and analyze their progress as the proceed with their various Net Zero Energy projects, such as the installation of Photovotaic cells over the parking structure and various buildings, installation and modernization of various electrical equipment and lights, and the installation of various batteries to help off set usage.
+This project is designed as a visual representation for the various 
                   </p>
                 </div>
-                <div class="typography-line">
+                <!-- <div class="typography-line">
                   <span>Quote</span>
                   <blockquote>
                     <p class="blockquote blockquote-primary">
@@ -210,7 +221,7 @@
                     <br>
                     <small>Use "small" tag for the headers</small>
                   </h2>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
