Add description for map.html

--- a/map.html
+++ b/map.html
@@ -51,6 +51,9 @@
     <div id="info">
         <center>
             <input style="width:200px" type="text" name="daterange" value="01/01/2017 - 01/02/2017" />
+            <p class="pad1">
+                See by shades of red the ranges of energy different buildings at the university use.
+            </p>
         </center>
     </div>
     <br />
